# Schrodinger_PINN

./: LICENSE  README.md  pyproject.toml
examples/: 2nd_order.ipynb  6th_order.ipynb  PINN(2nd_order).ipynb  PINN(4th_order).ipynb  PINN(6th_order).ipynb  PINN(load_model).ipynb  PINN(params_tuning).ipynb  SP_PINN.ipynb  Seg_PINN.ipynb  params_tuning.ipynb  usage_example(2nd order).ipynb  usage_example(6th order).ipynb  usage_example(load model).ipynb
schrodinger_pinn/: pinn.py  plots_and_stats.py  problems.py
